--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@sanity/asset-utils": "^1.3.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -18,11 +19,13 @@
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
+    "next-sanity": "^5.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.0"
   }
 }
