little bit home page improved

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,18 @@
 NEXTAUTH_SECRET=my_ultra_secure_nextauth_secret
 NEXTAUTH_URL=http://localhost:3000/
+NEXT_PUBLIC_SANITY_CLIENT=Sf9nfBimPUfdvWWKwq6mdZ0nFIBXMcKn8
+NEXT_PUBLIC_SANITY_PROJECT_ID=8
+
+
+NEXT_PUBLIC_FACEBOOK_CLIENT_ID=
+NEXT_PUBLIC_FACEBOOK_CLIENT_SECRET=76a4b
+
+
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=3086928
+NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=GOCSPX-f
+
+
+
+
+NEXT_PUBLIC_GITHUB_CLIENT_ID=c2e
+NEXT_PUBLIC_GITHUB_CLIENT_SECRET=4636
