--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
+    "next-auth-sanity": "^1.5.1",
     "next-sanity": "^5.1.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
