--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "formik": "^2.4.2",
     "next": "13.4.5",
     "next-auth": "^4.22.1",
     "next-auth-sanity": "^1.5.1",
@@ -27,6 +28,7 @@
     "react-redux": "^8.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.2.0"
   }
 }
