--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
-    "next": "13.4.5",
+    "next": "^13.4.19",
     "next-auth": "^4.22.1",
     "next-auth-sanity": "^1.5.1",
     "next-sanity": "^5.1.0",
