--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ NEXT_PUBLIC_GOOGLE_CLIENT_SECRET=GOCSPX-f
 
 NEXT_PUBLIC_GITHUB_CLIENT_ID=c2e
 NEXT_PUBLIC_GITHUB_CLIENT_SECRET=4636
+
+
+NEXT_PUBLIC_SOCKET_IO_SERVER_URL=http://localhost:5001
