--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,4 @@ NEXT_PUBLIC_GITHUB_CLIENT_ID=c2e
 NEXT_PUBLIC_GITHUB_CLIENT_SECRET=4636
 
 
-# NEXT_PUBLIC_SOCKET_IO_SERVER_URL=http://localhost:5001
+NEXT_PUBLIC_SOCKET_IO_SERVER_URL=http://localhost:5001
