--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.3",
+    "@types/multer": "^1.4.8",
     "bufferutil": "^4.0.7",
     "utf-8-validate": "^5.0.10"
   }
